[workspace]
members = [
  "rust/sbd-bench",
  "rust/sbd-client",
  "rust/sbd-e2e-crypto-client",
  "rust/sbd-o-bahn-server-tester",
  "rust/sbd-o-bahn-client-tester",
  "rust/sbd-server",
]
resolver = "2"

[profile.release]
panic = "abort"

[workspace.dependencies]
# workspace member deps
sbd-bench = { version = "0.0.9-alpha", path = "rust/sbd-bench" }
sbd-client = { version = "0.0.9-alpha", path = "rust/sbd-client" }
sbd-e2e-crypto-client = { version = "0.0.9-alpha", path = "rust/sbd-e2e-crypto-client" }
sbd-o-bahn-client-tester = { version = "0.0.9-alpha", path = "rust/sbd-o-bahn-client-tester" }
sbd-o-bahn-server-tester = { version = "0.0.9-alpha", path = "rust/sbd-o-bahn-server-tester" }
sbd-server = { version = "0.0.9-alpha", path = "rust/sbd-server" }
# crate deps
anstyle = "1.0.6"
base64 = "0.22.0"
bytes = "1.6.0"
clap = "4.5.4"
criterion = "0.5.1"
ed25519-dalek = { version = "2.1.1", default-features = false }
escargot = "0.5.10"
fastwebsockets = "0.7.1"
futures = "0.3.30"
hex = "0.4.3"
http-body-util = "0.1.0"
hyper = "1.2.0"
hyper-util = "0.1.3"
rand = "0.8.5"
rcgen = "0.13.1"
rustls = "0.22.4"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
slab = "0.4.9"
sodoken = { version = "0.0.901-alpha", default-features = false }
tempfile = "3.10.1"
tokio = { version = "1.37.0", default-features = false }
tokio-rustls = "0.25.0"
tokio-tungstenite = { version = "0.21.0", default-features = false }
tracing = "0.1.40"
webpki-roots = "0.26.1"

#[patch.crates-io]
#sodoken = { path = "../sodoken" }
