[workspace]
members = [
  "rust/sbd-bench",
  "rust/sbd-client",
  "rust/sbd-e2e-crypto-client",
  "rust/sbd-o-bahn-server-tester",
  "rust/sbd-o-bahn-client-tester",
  "rust/sbd-server",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
homepage = "https://holochain.org"

[profile.release]
panic = "abort"

[workspace.dependencies]
# workspace member deps
sbd-bench = { version = "0.1.0", path = "rust/sbd-bench" }
sbd-client = { version = "0.3.1", path = "rust/sbd-client" }
sbd-e2e-crypto-client = { version = "0.3.1", path = "rust/sbd-e2e-crypto-client" }
sbd-o-bahn-client-tester = { version = "0.3.1", path = "rust/sbd-o-bahn-client-tester" }
sbd-o-bahn-server-tester = { version = "0.3.1", path = "rust/sbd-o-bahn-server-tester" }
sbd-server = { version = "0.3.1", path = "rust/sbd-server" }
# crate deps
anstyle = "1.0.6"
axum = { version = "0.8.3", default-features = false }
axum-server = "0.7.2"
base64 = "0.22.0"
bytes = "1.9.0"
clap = "4.5.4"
criterion = "0.6"
ed25519-dalek = { version = "2.1.1", default-features = false }
escargot = "0.5.10"
futures = "0.3.30"
hex = "0.4.3"
rand = "0.8"
rcgen = "0.13.1"
rustls = "0.23"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.1.2"
serde = "1.0"
serde_json = "1.0"
slab = "0.4.9"
sodoken = { version = "0.1.0", default-features = false }
tempfile = "3.10.1"
tokio = { version = "1.37.0", default-features = false }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.27", default-features = false }
tracing = "0.1.40"
url = "2.5.4"
ureq = "3.0"
webpki-roots = "1.0"

#[patch.crates-io]
#sodoken = { path = "../sodoken" }
