[package]
name = "sbd-bench"
version = "0.0.10-alpha2"
edition = "2021"

[dependencies]
base64 = { workspace = true }
sbd-server = { workspace = true }
sbd-client = { workspace = true, features = [ "raw_client" ] }
tokio = { workspace = true, features = [ "full" ] }

[dev-dependencies]
criterion = { workspace = true, features = [ "async_tokio" ] }

[[bench]]
name = "thru"
harness = false

[[bench]]
name = "c_turnover"
harness = false
