[package]
name = "sbd-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
sbd-server = { workspace = true }
sbd-client = { workspace = true, features = [ "raw_client" ] }
tokio = { workspace = true, features = [ "full" ] }

[dev-dependencies]
criterion = { workspace = true, features = [ "async_tokio" ] }

[[bench]]
name = "thru"
harness = false

[[bench]]
name = "c_turnover"
harness = false
