[package]
name = "sbd-client"
version = "0.0.4-alpha"
description = "simple websocket-based message relay client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
documentation = "https://docs.rs/sbd-client"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
base64 = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio = { workspace = true, default-features = false, features = [ "io-util", "net", "sync", "time", "rt" ] }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true, default-features = false, features = [ "connect", "__rustls-tls" ] }


# optional
ed25519-dalek = { workspace = true, features = [ "rand_core" ], optional = true }
rand = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[target.'cfg(not(any(target_os = "windows", target_os = "linux", target_os = "macos")))'.dependencies]
webpki-roots = { workspace = true }

[dev-dependencies]
escargot = { workspace = true, features = [ "print" ] }
hex = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
# don't use workspace, because that has a version
# use path only so we can cargo publish without circular dep problems
sbd-server = { path = "../sbd-server" }

[features]
default = [ "crypto" ]

# built-in signing ability
crypto = [ "dep:ed25519-dalek", "dep:rand" ]

# expose the raw client (used in server test suite)
raw_client = []

# force webpki roots instead of native certs
force_webpki_roots = [ "dep:webpki-roots" ]

[package.metadata.docs.rs]
all-features = true
