[package]
name = "sbd-e2e-crypto-client"
description = "simple websocket-based e2e encrypted message relay client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
documentation = "https://docs.rs/sbd-e2e-crypto-client"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
version = "0.0.10-alpha3"
edition = "2021"

[dependencies]
bytes = { workspace = true }
sbd-client = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sbd-server = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
