[package]
name = "sbd-e2e-crypto-client"
version.workspace = true
description = "simple websocket-based e2e encrypted message relay client"
documentation = "https://docs.rs/sbd-e2e-crypto-client"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
bytes = { workspace = true }
sbd-client = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sbd-server = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
