[package]
name = "sbd-o-bahn-client-tester"
version = "0.0.12-alpha"
description = "simple websocket-based message relay client tester"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
documentation = "https://docs.rs/sbd-o-bahn-client-tester"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
hex = { workspace = true }
sbd-server = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
