[package]
name = "sbd-o-bahn-client-tester"
version.workspace = true
description = "simple websocket-based message relay client tester"
documentation = "https://docs.rs/sbd-o-bahn-client-tester"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
hex = { workspace = true }
sbd-server = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
