[package]
name = "sbd-o-bahn-server-tester"
version = "0.0.7-alpha"
description = "simple websocket-based message relay server tester"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
documentation = "https://docs.rs/sbd-o-bahn-server-tester"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
sbd-client = { workspace = true, features = [ "raw_client" ] }
tokio = { workspace = true, features = [ "full" ] }
