[package]
name = "sbd-o-bahn-server-tester"
version.workspace = true
description = "simple websocket-based message relay server tester"
documentation = "https://docs.rs/sbd-o-bahn-server-tester"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
sbd-client = { workspace = true, features = [ "raw_client" ] }
tokio = { workspace = true, features = [ "full" ] }
