[package]
name = "sbd-server"
version.workspace = true
description = "simple websocket-based message relay server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/sbd"
documentation = "https://docs.rs/sbd-server"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "networking"]
categories = ["network-programming"]
edition.workspace = true

[dependencies]
anstyle = { workspace = true }
axum = { workspace = true, default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "ws",
] }
axum-server = { workspace = true, features = [ "tls-rustls" ] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = [ "color", "derive", "wrap_help" ] }
ed25519-dalek = { workspace = true, default-features = false }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tokio-rustls = { workspace = true }
ureq = { workspace = true }

# feature tungstenite
futures = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, default-features = false, features = [ "handshake" ], optional = true }

[dev-dependencies]
escargot = { workspace = true, features = [ "print" ] }
rcgen = { workspace = true }
# don't use workspace, because that has a version
# use path only so we can cargo publish without circular dep problems
sbd-client = { path = "../sbd-client", features = [ "raw_client" ] }
tempfile = { workspace = true }
tokio = { workspace = true, features = [ "test-util" ] }

[features]
default = [ "tungstenite" ]

tungstenite = [ "dep:futures", "dep:tokio-tungstenite" ]

# deprecated feature
fastwebsockets = []

unstable = []
